chore: refactor user creation params
