# services/authentication-service/openapi.json
@@ -1907,6 +1907,13 @@
           "username": {
             "type": "string"
           },
+          "email": {
+            "type": "string"
+          },
+          "phone": {
+            "type": "string",
+            "pattern": "^\\+?[1-9]\\d{1,14}$"
+          },
           "name": {
             "type": "string"
           },
@@ -1919,25 +1926,8 @@
           "middleName": {
             "type": "string"
           },
-          "email": {
-            "type": "string"
-          },
           "designation": {
             "type": "string"
-          },
-          "phone": {
-            "type": "string",
-            "pattern": "^\\+?[1-9]\\d{1,14}$"
-          },
-          "authClientIds": {
-            "type": "array",
-            "items": {
-              "type": "number"
-            }
-          },
-          "lastLogin": {
-            "type": "string",
-            "format": "date-time"
           },
           "photoUrl": {
             "type": "string"
@@ -1957,6 +1947,16 @@
           },
           "defaultTenantId": {
             "type": "string"
+          },
+          "authClientIds": {
+            "type": "array",
+            "items": {
+              "type": "number"
+            }
+          },
+          "lastLogin": {
+            "type": "string",
+            "format": "date-time"
           },
           "permissions": {
             "type": "array",
